fix(auth): close RS256 fallback, add stable key rotation, pin HS256 algorithm
Closes the RS256→HS256 algorithm downgrade attack surface and replaces
startup-random RSA keys with deterministic, config-loaded key material
suitable for multi-replica production deployments.

Security changes:
- Verifiers (app+admin): RS256 token with unknown/missing kid is now
  REJECTED instead of falling back to HS256. Tokens with unsupported
  algorithms (e.g. 'none') are rejected. Only HS256 and RS256 accepted.
- JwtTokenProvider: pin HS256 explicitly via signWith(key, Jwts.SIG.HS256)
  to prevent jjwt 0.13.0 auto-selecting HS384/HS512 for long secrets
  (>=48 chars), which would be rejected by the new algorithm whitelist.

Key management changes:
- RsaKeyManager: loads RSA private key from base64 PKCS8 env var
  (JWT_RSA_PRIVATE_KEY) instead of generating random keypair at startup.
  Key ID is deterministic SHA-256 thumbprint of the modulus, so all
  replicas sharing the same key material produce the same kid.
- Optional JWT_RSA_PREVIOUS_PRIVATE_KEY for N/N-1 rotation overlap:
  JWKS publishes both current and previous public keys.
- Fail-fast: rsa.enabled=true without key material throws at startup.

Default behavior unchanged: jwt.rsa.enabled=false (HS256 only).

Changes:
- RsaKeyManager: rewritten for config-loaded stable key ring
- ResourceServerJwtVerifier (app+admin): fail-closed RS256 + alg whitelist
- JwtTokenProvider: explicit HS256 algorithm pinning
- application.yml: jwt.rsa.private-key / previous-private-key config
- RsaKeyManagerTest: 7 new tests (deterministic kid, N/N-1, fail-fast)
- Verifier tests: RS256 fail-closed + unsupported algorithm rejection